--- a/backend/src/main/webapp/views/speakers/view.html
+++ b/backend/src/main/webapp/views/speakers/view.html
@@ -3,7 +3,7 @@
     <h2 ng-translate="speaker.title">Speakers</h2>
 
     <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#saveSpeakerModal" ng-click="clear()">
-        <span class="glyphicon glyphicon-flash"></span> <span ng-translate="speaker.create">Create a new Speaker</span>
+        <span class="glyphicon glyphicon-flash"></span> Create a new Speaker 2
     </button>
     <div class="modal fade" id="saveSpeakerModal" tabindex="-1" role="dialog" aria-labelledby="mySpeakerLabel"
          aria-hidden="true">
