--- a/backend/src/main/webapp/views/speakers/list.html
+++ b/backend/src/main/webapp/views/speakers/list.html
@@ -25,13 +25,13 @@
                      <td>{{speaker.longDescription}}</td>
                     <td>
                         <a href="#/speaker/{{speaker.id}}" class="btn btn-default">
-                            <span class="fa fa-folder-open"></span> <span translate="entity.view">View</span>
+                            <span class="fa fa-folder-open"></span> <span translate="action.view">View</span>
                         </a>
                         <a href="#/speaker/{{speaker.id}}/edit" class="btn btn-default">
-                            <span class="fa fa-pencil"></span> <span translate="entity.edit">Edit</span>
+                            <span class="fa fa-pencil"></span> <span translate="action.edit">Edit</span>
                         </a>
                         <a class="btn btn-danger" uai-confirm confirm-ok="delete(speaker.id)" confirm-message-translate="confirm.delete" item="speaker.id">
-                            <span class="fa fa-remove"></span> <span translate="entity.delete">Delete</span>
+                            <span class="fa fa-remove"></span> <span translate="action.delete">Delete</span>
                         </a>
                     </td>
                 </tr>
