--- a/backend/src/main/webapp/views/speakers/view.html
+++ b/backend/src/main/webapp/views/speakers/view.html
@@ -2,7 +2,7 @@
 
     <div class="text-right">
         <a href="#/speaker" class="btn btn-default">
-            <span class="fa fa-arrow-left"></span> <span ng-translate="speaker.title">Voltar</span>
+            <span class="fa fa-arrow-left"></span> <span ng-translate="action.back">Back</span>
         </a>
     </div>
     <div class="page-header text-center">
@@ -14,7 +14,7 @@
     <div class="text-center">
         <span class="fa fa-quote-left">
         <span ng-if="speaker.longDescription">{{speaker.longDescription}}</span>
-        <span ng-if="!speaker.longDescription">O palestrante não forneceu uma descrição longa.</span>
+        <span ng-if="!speaker.longDescription">The speaker did not provide a long description.</span>
         <span class="fa fa-quote-right">
     </div>
 </div>
